2002-04-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tclWinFCmd.c (DoDeleteFile): check return of setattr API
	calls in file deletion for correct Win32 API handling.

	* win/Makefile.in: correct dependencies for shell, gdb, runtest
	targets.

	* doc/clock.n:
	* compat/strftime.c (_fmt): change strftime to correctly handle
	localized %c, %x and %X on Windows.  Added some notes about how
	the other values could be further localized.

2002-04-19  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclMain.c (Tcl_Main):  Free the memory allocated for the
	startup script path.  [Bug 543549]

	* library/msgcat/msgcat.tcl:  [mcmax] wasn't using the caller's
	namespace when determining the max translated length.  Also
	made revisions for better use of namespace variables and more
	efficient [uplevel]s.

	* doc/msgcat.n:
	* library/msgcat/msgcat.tcl:
	* library/msgcat/pkgIndex.tcl:  Added [mcload] to the export list
	of msgcat; bumped to 1.2.3.  [Bug 544727]

2002-04-20  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclInt.decls:
	* generic/tclIntPlatDecls.h:
	* generic/tclStubInit.c:
	* mac/tclMacFCmd.c:
	* mac/tclMacFile.c:
	* mac/tclMacUtil.c: Modified TclpObjNormalizePath to be alias
	file aware, and replaced various calls to FSpLocationFrom*Path
	by calls to new alias file aware versions FSpLLocationFrom*Path.
	The alias file aware routines don't resolve the last component of
	a path if it is an alias. This allows [file copy/delete] etc. to
	act correctly on alias files. (c.f. discussion in Bug #511666)

2002-04-19  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tests/lindex.test (lindex-3.7): 
	* generic/tclUtil.c (TclGetIntForIndex): Stopped indexes from
	hitting wide ints.  [Bug #526717]

2002-04-18  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclNamesp.c:
	* tests/info.test: [Bug 545325] info level didn't report
	namespace eval, bug report by Richard Suchenwirth.

2002-04-18  Don Porter  <dgp@users.sourceforge.net>
